# catan-rl

./: .gitignore  README.md  action_graph.html  index.css  index.html  main.py  profile_results.prof  pyproject.toml  requirements.txt  serve.py  setup.py  stats.py
.github/workflows/: run-pytest.yml
docs/: optimize_orange.md  purchase_power.md
lib/: __init__.py
lib/experiments/: optimize_orange.py  win_stats.py
lib/gameplay/: bank.py  board.py  dice.py  game.py  hex.py  params.py  pieces.py  player.py
lib/logging/: database.py
lib/operations/: ops.py
lib/robot/: __init__.py  action.py  action_graph.py  action_type.py  build_city.py  build_road.py  build_settlement.py  buy_development_card.py  play_development_card.py  player_state.py  robot.py
lib/visualizer/: action_graph_visualizer.py  renderer.py
test/: test_bank.py  test_board.py  test_dice.py  test_game.py  test_hex.py  test_pieces.py  test_player.py
